objects/Quarterly_Performance_Evaluation__c.object
<CustomObject>
    <description>Store info for Quarterly Bonus for Performance Metric calculation.( Not created by appirio)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quarterly Performance Evaluations</relationshipLabel>
        <relationshipName>Quarterly_Performance_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Metric</label>
        <referenceTo>Performance_Metric__c</referenceTo>
        <relationshipLabel>Quarterly Performance Evaluations</relationshipLabel>
        <relationshipName>Quarterly_Performance_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tier</label>
        <referenceTo>Tier__c</referenceTo>
        <relationshipLabel>Quarterly Performance Evaluations</relationshipLabel>
        <relationshipName>Quarterly_Performance_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Memo_QTD__c</fullName>
        <label>Total Credit Memo QTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Incentive_QTD__c</fullName>
        <label>Total Incentive QTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quarterly Performance Evaluation</label>
    <nameField>
        <displayFormat>QPM-{000000}</displayFormat>
        <label>Quarter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Performance Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>